Added few programs for java stream